--- a/index.html
+++ b/index.html
@@ -150,6 +150,24 @@
     <section id="Menu" style="padding-top: 100px;">
       <h1 style="font-family: 'Dancing Script', cursive; font-size: 60px; color: #d63031;text-align: center;">Today's Menu</h1>
       <img src="./assets/red seperator.png" style="padding-left: 580px;">
+      <div class="container">
+        <button class="hover-effect b1" onClick="myFunction()">ALL</button>
+        <button class="hover-effect b2" onClick="myFunction2()">BREAKFAST</button>
+        <button class="hover-effect b3" onClick="myFunction3()">LUNCH</button>
+        <button class="hover-effect b4" onClick="myFunction3()">DINNER</button>
+        <button class="hover-effect b5" onClick="myFunction3()">COFFE</button>
+        <button class="hover-effect b6" onClick="myFunction3()">SNACKS</button>
+      </div>
+
+<div class="content">
+  <div class="round first"><img src="./assets/menu_1.jpg"/> </div>
+  <div class="round second"><img src="./assets/menu_2.jpg"/></div>
+  <div class="round third"><img src="./assets/menu_3.jpg"/> </div>
+  <div class="round fourth"><img src="./assets/menu_4.jpg"/> </div>
+  <div class="round fifth"><img src="./assets/menu_5.jpg"/> </div>
+  <div class="round sixth"><img src="./assets/menu_6.jpg"/> </div>
+</div>
+     
 
 
     </section>
