--- a/index.html
+++ b/index.html
@@ -168,13 +168,54 @@
   <div class="round sixth"><img src="./assets/menu_6.jpg"/> </div>
 </div>
      
-
+<div class="offer-container" style="position: relative;">
+  <img class="offer-bg" src="./assets/promo_slide_2.jpg" style="height: 400px; width: 100%; background: fixed;">
+  <h1 style="position: absolute;top: 120px; color: #fff; font-family: 'PT Sans Narrow', sans-serif; font-weight: 700; font-size: 45px; word-spacing: 5px;left: 440px; letter-spacing: 5px;">BOOK A TABLE NOW !</h1>
+<button style="background-color: #fff;
+color: #d63031; font-weight: 700;
+position: absolute;
+padding: 10px 35px;
+border: 1px solid #fff;
+left: 570px;
+top: 200px;
+">BOOK NOW</button>
+</div>
 
     </section>
 
     <!-- Team -->
 
     <section id="Team">
+      <h1 style="font-family: 'Dancing Script', cursive; font-size: 65px; text-align: center; color: #d63031; padding-top: 50px;">Our Chefs</h1>
+      <img src="./assets/red seperator.png" style="padding-left: 580px;">
+
+      <div class="chefs">
+        <div class="chef-1">
+          <img src="./assets/team-1.jpg">
+          <h5 style="font-size: 16px; color: darkslategray;font-family: 'PT Sans Narrow', sans-serif; letter-spacing: 1.5px; text-align: center ; padding: 20px;">Mark Angelila</h5>
+        <p style="text-align: center; font-size: 12px;line-height: 22px; word-spacing: 1px; letter-spacing: 1px; color: darkslategray;font-family:sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+        </div>
+        <div class="chef-2">
+          <img src="./assets/team-2.jpg">
+          <h5 style="font-size: 16px; color: darkslategray;font-family: 'PT Sans Narrow', sans-serif; letter-spacing: 1.5px; text-align: center ; padding: 20px;">Angel Meskat</h5>
+          <p style="text-align: center; font-size: 12px;line-height: 22px; word-spacing: 1px; letter-spacing: 1px; color: darkslategray;font-family:sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, se</p>
+        </div>
+       <div class="chef-3">
+        <img src="./assets/team-3.jpg">
+        <h5 style="font-size: 16px; color: darkslategray;font-family: 'PT Sans Narrow', sans-serif; letter-spacing: 1.5px; text-align: center ; padding: 20px;">Jon Doe</h5>
+        <p style="text-align: center; font-size: 12px;line-height: 22px; word-spacing: 1px; letter-spacing: 1px; color: darkslategray;font-family:sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, se</p>
+      </div>
+        <div class="chef-4">
+          <img src="./assets/team-4.jpg">
+          <h5 style="font-size: 16px; color: darkslategray;font-family: 'PT Sans Narrow', sans-serif; letter-spacing: 1.5px; text-align: center ; padding: 20px;">Angel Di Maria</h5>
+          <p style="text-align: center; font-size: 12px;line-height: 22px; word-spacing: 1px; letter-spacing: 1px; color: darkslategray;font-family:sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, se</p>
+        </div>
+        <div class="chef-5">
+          <img src="./assets/team-5.jpg">
+          <h5 style="font-size: 16px; color: darkslategray;font-family: 'PT Sans Narrow', sans-serif; letter-spacing: 1.5px; text-align: center ; padding: 20px;">Park Ji Sung</h5>
+          <p style="text-align: center; font-size: 12px;line-height: 22px; word-spacing: 1px; letter-spacing: 1px; color: darkslategray;font-family:sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, se</p>
+        </div>
+      </div>
 
     </section>
 
