--- a/index.html
+++ b/index.html
@@ -162,15 +162,29 @@
       </div>
 
 <div class="content">
-  <div class="round first"><img src="./assets/menu_1.jpg"/> </div>
-  <div class="round second"><img src="./assets/menu_2.jpg"/></div>
-  <div class="round third"><img src="./assets/menu_3.jpg"/> </div>
-  <div class="round fourth"><img src="./assets/menu_4.jpg"/> </div>
-  <div class="round fifth"><img src="./assets/menu_5.jpg"/> </div>
-  <div class="round sixth"><img src="./assets/menu_6.jpg"/> </div>
+  <div class="round first"><img src="./assets/menu_1.jpg"/>
+    <p style="font-family: 'PT Sans Narrow', sans-serif; font-size: 20px; font-weight:600; padding-top: 10px;">Cupcake Recipes<br> <span style="font-size: 13px; font-weight:300; font-family: Arial, Helvetica, sans-serif;color: darkslategray;">- Juice Fruit<br>- Vegetable<br>- Tomato </span></p>
+    <div>
+  </div>
+  </div>
+  <div class="round second"><img src="./assets/menu_2.jpg"/>
+    <p style="font-family: 'PT Sans Narrow', sans-serif; font-size: 20px; font-weight:600; padding-top: 10px;">Cupcake Recipes<br> <span style="font-size: 13px; font-weight:300; font-family: Arial, Helvetica, sans-serif;color: darkslategray;">- Juice Fruit<br>- Vegetable<br>- Tomato </span></p>
+  </div>
+  <div class="round third"><img src="./assets/menu_3.jpg"/> 
+    <p style="font-family: 'PT Sans Narrow', sans-serif; font-size: 20px; font-weight:600; padding-top: 10px;">Cupcake Recipes<br> <span style="font-size: 13px; font-weight:300; font-family: Arial, Helvetica, sans-serif;color: darkslategray;">- Juice Fruit<br>- Vegetable<br>- Tomato </span></p>
+  </div>
+  <div class="round fourth"><img src="./assets/menu_4.jpg"/> 
+    <p style="font-family: 'PT Sans Narrow', sans-serif; font-size: 20px; font-weight:600; padding-top: 10px;">Cupcake Recipes<br> <span style="font-size: 13px; font-weight:300; font-family: Arial, Helvetica, sans-serif;color: darkslategray;">- Juice Fruit<br>- Vegetable<br>- Tomato </span></p>
+  </div>
+  <div class="round fifth"><img src="./assets/menu_5.jpg"/>
+    <p style="font-family: 'PT Sans Narrow', sans-serif; font-size: 20px; font-weight:600; padding-top: 10px;">Cupcake Recipes<br> <span style="font-size: 13px; font-weight:300; font-family: Arial, Helvetica, sans-serif;color: darkslategray;">- Juice Fruit<br>- Vegetable<br>- Tomato </span></p>
+   </div>
+  <div class="round sixth"><img src="./assets/menu_6.jpg"/>
+    <p style="font-family: 'PT Sans Narrow', sans-serif; font-size: 20px; font-weight:600; padding-top: 10px;">Cupcake Recipes<br> <span style="font-size: 13px; font-weight:300; font-family: Arial, Helvetica, sans-serif;color: darkslategray;">- Juice Fruit<br>- Vegetable<br>- Tomato </span></p>
+   </div>
 </div>
 </div> 
-<div class="offer-container" style="position: relative;">
+<div class="offer-container" style="position: relative; margin-top: 100px;">
   <img class="offer-bg" src="./assets/promo_slide_2.jpg" style="height: 400px; width: 100%; background: fixed;">
   <h1 style="position: absolute;top: 120px; color: #fff; font-family: 'PT Sans Narrow', sans-serif; font-weight: 700; font-size: 45px; word-spacing: 5px;left: 450px; letter-spacing: 5px;">BOOK A TABLE NOW !</h1>
 <button style="background-color: #fff;
@@ -226,8 +240,8 @@ top: 200px;
       <div class="blog-container" style="position: relative;">
         <img class="blog-bg" src="./assets/blog-3.jpg" style="height: 800px; width: 100%; background: fixed;">
 </div>
-        <h1 style="font-family: 'Dancing Script', cursive; font-size: 60px; color: #d63031; position: absolute;left: 535px; bottom: -3460px;">Latest News</h1>
-      <img src="./assets/red seperator.png" style="position: absolute; bottom: -3500px;left: 575px;">
+        <h1 style="font-family: 'Dancing Script', cursive; font-size: 60px; color: #d63031; position: absolute;left: 535px; bottom: -3560px;">Latest News</h1>
+      <img src="./assets/red seperator.png" style="position: absolute; bottom: -3600px;left: 575px;">
 
       <div class="container-blog">
         <div class="flex">
@@ -274,7 +288,7 @@ top: 200px;
       <div class="blog-container" style="position: relative;">
         <img class="blog-bg" src="./assets/Footer background.png" style="height: auto; width: 100%; background: fixed;">
 </div>
-<img src="./assets/main_logo.png" style="position: absolute; bottom: -4600px; left: 585px;">
+<img src="./assets/main_logo.png" style="position: absolute; bottom: -4715px; left: 585px;">
 <div class="footer">
   <h5 style="line-height: 60px;">20, floor, Queensland Victoria Building. 60 california street california USA</h5>
 <p style="font-weight:600; font-size:16px; color: #d63031; line-height: 40px;">hello@dawat.com<br>+88 000 0000 1111</p>
